--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "egg": "^3",
+    "egg-cors": "^2.2.3",
     "egg-jwt": "^3.1.7",
     "egg-mysql": "^4.0.0",
     "egg-scripts": "^2",
-    "egg-view-ejs": "^3.0.0"
+    "egg-view-ejs": "^3.0.0",
+    "mkdirp": "^3.0.1",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "egg-bin": "^5",
