--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "start": "egg-scripts start --daemon --title=egg-server-cashbookBackend",
     "stop": "egg-scripts stop --title=egg-server-cashbookBackend",
+    "deploy": "egg-scripts start --port=7001 --hostname=0.0.0.0 --daemon --title=egg-server-cashbookBackend",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
