--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --hostname=0.0.0.0 --port=443 --https.key=cert/api.zhuzhucash.top.key --https.cert=cert/api.zhuzhucash.top.pem --daemon --title=egg-server-jifen",
+    "start": "egg-scripts start --hostname=0.0.0.0 --port=443 --https.key=cert/api.zhuzhucash.top.key --https.cert=cert/api.zhuzhucash.top.pem --title=egg-server-jifen",
     "stop": "egg-scripts stop --title=egg-server-jifen",
     "deploy": "egg-scripts start --port=7001 --hostname=0.0.0.0 --daemon --title=egg-server-cashbookBackend",
     "dev": "egg-bin dev",
